--- a/divisor4bit.qsf
+++ b/divisor4bit.qsf
@@ -48,3 +48,43 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name BDF_FILE divisor4bit.bdf
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_T13 -to A2
+set_location_assignment PIN_V13 -to A1
+set_location_assignment PIN_T12 -to A3
+set_location_assignment PIN_Y16 -to AO0
+set_location_assignment PIN_W16 -to AO1
+set_location_assignment PIN_Y17 -to AO2
+set_location_assignment PIN_V16 -to AO3
+set_location_assignment PIN_U17 -to AO4
+set_location_assignment PIN_V18 -to AO5
+set_location_assignment PIN_V19 -to AO6
+set_location_assignment PIN_AA15 -to B0
+set_location_assignment PIN_AB15 -to B1
+set_location_assignment PIN_AA14 -to B2
+set_location_assignment PIN_AA13 -to B3
+set_location_assignment PIN_N9 -to BO0
+set_location_assignment PIN_T14 -to BO2
+set_location_assignment PIN_M8 -to BO1
+set_location_assignment PIN_P14 -to BO3
+set_location_assignment PIN_C1 -to BO4
+set_location_assignment PIN_C2 -to BO5
+set_location_assignment PIN_W19 -to BO6
+set_location_assignment PIN_U21 -to O00
+set_location_assignment PIN_V21 -to O01
+set_location_assignment PIN_W22 -to O02
+set_location_assignment PIN_W21 -to O03
+set_location_assignment PIN_Y22 -to O04
+set_location_assignment PIN_Y21 -to O05
+set_location_assignment PIN_AA22 -to O06
+set_location_assignment PIN_AA20 -to O10
+set_location_assignment PIN_AB20 -to O11
+set_location_assignment PIN_AA19 -to O12
+set_location_assignment PIN_AA18 -to O13
+set_location_assignment PIN_AB18 -to O14
+set_location_assignment PIN_AA17 -to O15
+set_location_assignment PIN_U22 -to O16
+set_location_assignment PIN_U13 -to A0
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
