--- a/divisor4bit.qsf
+++ b/divisor4bit.qsf
@@ -51,27 +51,27 @@ set_global_assignment -name BDF_FILE divisor4bit.bdf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_location_assignment PIN_T13 -to A2
-set_location_assignment PIN_V13 -to A1
-set_location_assignment PIN_T12 -to A3
-set_location_assignment PIN_Y16 -to AO0
-set_location_assignment PIN_W16 -to AO1
-set_location_assignment PIN_Y17 -to AO2
-set_location_assignment PIN_V16 -to AO3
-set_location_assignment PIN_U17 -to AO4
-set_location_assignment PIN_V18 -to AO5
-set_location_assignment PIN_V19 -to AO6
-set_location_assignment PIN_AA15 -to B0
-set_location_assignment PIN_AB15 -to B1
-set_location_assignment PIN_AA14 -to B2
-set_location_assignment PIN_AA13 -to B3
-set_location_assignment PIN_N9 -to BO0
-set_location_assignment PIN_T14 -to BO2
-set_location_assignment PIN_M8 -to BO1
-set_location_assignment PIN_P14 -to BO3
-set_location_assignment PIN_C1 -to BO4
-set_location_assignment PIN_C2 -to BO5
-set_location_assignment PIN_W19 -to BO6
+set_location_assignment PIN_AA13 -to A2
+set_location_assignment PIN_AA14 -to A1
+set_location_assignment PIN_AB13 -to A3
+set_location_assignment PIN_N9 -to AO0
+set_location_assignment PIN_M8 -to AO1
+set_location_assignment PIN_T14 -to AO2
+set_location_assignment PIN_P14 -to AO3
+set_location_assignment PIN_C1 -to AO4
+set_location_assignment PIN_C2 -to AO5
+set_location_assignment PIN_W19 -to AO6
+set_location_assignment PIN_U13 -to B0
+set_location_assignment PIN_V13 -to B1
+set_location_assignment PIN_T13 -to B2
+set_location_assignment PIN_T12 -to B3
+set_location_assignment PIN_Y16 -to BO0
+set_location_assignment PIN_Y17 -to BO2
+set_location_assignment PIN_W16 -to BO1
+set_location_assignment PIN_V16 -to BO3
+set_location_assignment PIN_U17 -to BO4
+set_location_assignment PIN_V18 -to BO5
+set_location_assignment PIN_V19 -to BO6
 set_location_assignment PIN_U21 -to O00
 set_location_assignment PIN_V21 -to O01
 set_location_assignment PIN_W22 -to O02
@@ -86,5 +86,11 @@ set_location_assignment PIN_AA18 -to O13
 set_location_assignment PIN_AB18 -to O14
 set_location_assignment PIN_AA17 -to O15
 set_location_assignment PIN_U22 -to O16
-set_location_assignment PIN_U13 -to A0
+set_location_assignment PIN_AB15 -to A0
+set_location_assignment PIN_N1 -to OsinalB
+set_location_assignment PIN_AA2 -to OsinalResto
+set_location_assignment PIN_W2 -to OsinalResul
+set_location_assignment PIN_AA15 -to sinalB
+set_location_assignment PIN_AB12 -to sinalA
+set_location_assignment PIN_L1 -to OsinalA
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
